--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,2 +1,15 @@
-<h1>Pages#info</h1>
-<p>Find me in app/views/pages/info.html.erb</p>
+<h1>My First Rails Girls</h1>
+  <div>
+    <h2>Hypatia</h2>
+    <div>
+      <p>"Reserve your right to think, for even to think wrongly is better than not to think at all."</p>
+      <p>"Life is an unfoldment, and the further we travel the more truth we can comprehend. To understand the things that are at our door is the best preparation for understanding those that lie beyond."</p>
+      <img src="https://www.helloworld.rs/public/media/2016/04/Teenage-Rails-Girls-Beograd-672x372.png" />
+    </div>
+      <p>To learn more about HTML</p>
+      <a href="http://www.w3schools.com/html/">Visit HTML tutorial</a>
+    <h2>Find me</h2>
+      <a href="https://github.com/mrlica">Github</a>
+      <a href="mailto:mrlica@live.com">Send me an email</a>
+  </div>
+
