Add PostgreSQL as db for Heroku

--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,8 +1,9 @@
 <h1>My First Rails Girls</h1>
   <div>
-    <h2>Hypatia</h2>
+    <h2>Rails Girls
+  </h2>
     <div>
-      <p>"Reserve your right to think, for even to think wrongly is better than not to think at all."</p>
+      <p>"Pozdrav svima!!!! Idemo Rails Girls 2016."</p>
       <p>"Life is an unfoldment, and the further we travel the more truth we can comprehend. To understand the things that are at our door is the best preparation for understanding those that lie beyond."</p>
       <img src="https://www.helloworld.rs/public/media/2016/04/Teenage-Rails-Girls-Beograd-672x372.png" />
     </div>
